fix : tag cloud preview and fix comment overlap issue

--- a/assets/css/unminified/editor-rtl.css
+++ b/assets/css/unminified/editor-rtl.css
@@ -231,6 +231,19 @@
 }
 
 /*--------------------------------------------------------------
+# Tag cloud
+--------------------------------------------------------------*/
+.is-style-swt-tag-cloud-pill .tag-cloud-link {
+  font-size: var(--wp--preset--font-size--x-small);
+  color: var(--wp--preset--color--heading);
+  font-weight: var(--wp--custom--font-weight--regular);
+  border: 1px solid var(--wp--preset--color--outline);
+  border-radius: var(--wp--custom--border-radius--x-large);
+  padding: 2px 12px;
+  margin-bottom: 5px;
+}
+
+/*--------------------------------------------------------------
 # Editor dynamic duotone support
 --------------------------------------------------------------*/
 .swt-duotone-primary {
