--- a/sass/editor.scss
+++ b/sass/editor.scss
@@ -289,6 +289,23 @@
 }
 
 
+/*--------------------------------------------------------------
+# Tag cloud
+--------------------------------------------------------------*/
+.is-style-swt-tag-cloud-pill {
+    .tag-cloud-link {
+        font-size: var(--wp--preset--font-size--x-small);
+        color: var(--wp--preset--color--heading);
+        font-weight: var(--wp--custom--font-weight--regular);
+        border: 1px solid var(--wp--preset--color--outline);
+        border-radius: var(--wp--custom--border-radius--x-large);
+        padding: 2px 12px;
+        margin-bottom: 5px;
+    }
+}
+
+
+
 // Note: Need to remove all above code after wordpress fixes issues with register_block_style not applying styles in the editor.
 
 
